# breploader

./: .gitignore  CMakeLists.txt
ext/: neoflann.h
include/: body.h  edge.h  face.h  loop.h  topology.h  types.h  vertex.h
src/: body.cpp
src/occ/: occtbody.cpp  occtedge.cpp  occtface.cpp  occtloop.cpp  occtvertex.cpp
src/ps/: psbody.cpp  psedge.cpp  psface.cpp  psloop.cpp  psvertex.cpp
